samples/_failures_safe/1761265683_53e336_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9991d1ec.c: In function ‘main’:
./samples/SAFE/__tmp_9991d1ec.c:168:5: error: expected expression at end of input
  168 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_9991d1ec.c:168:5: error: expected declaration or statement at end of input
